--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>AIRflow</title>
-<link rel="stylesheet" type="text/css" href="../static/stylesStill.css" />
+<link rel="stylesheet" type="text/css" href="../../../My Web Sites/AirFlow4Earth.github.io/SlideDeck/css/stylesStill.css" />
 </head>
 <header>
 </header>
@@ -127,18 +127,18 @@
 <div class="flex-container">
 <div>
 <h2>Developer API to predict pollution routes</h2>
-<p><img src="../../../My Web Sites/AirFlow4Earth.github.io/SlideDeck/media/airflowModel.svg" /></p>
+<p><img src="../static/airflowModel.svg" /></p>
 <p>Examine the market and you will discover what we have - pollution data has not been made into a functioning route service. Our API will provide map developers a new way to interact with their users, and researchers a new way to study the impact of pollution upon their areas of study.</p>
 <h3>Progress: API connections verified. The AI behind the API constructed.</h3>
 </div>
 <div>
 <h2>Medical App</h2>
-<p><img src="../../../My Web Sites/AirFlow4Earth.github.io/SlideDeck/media/airflowMedicalMarket.svg" /></p>
+<p><img src="../static/airflowMedicalMarket.svg" /></p>
 <!--<div class="flex-container-m">
 <div>
-<img src="../../My Web Sites/AirFlow4Earth.github.io/SlideDeck/media/airflowMedicalProducts.svg" />
+<img src="static/airflowMedicalProducts.svg" />
 </div>
-<div><img src="../../My Web Sites/AirFlow4Earth.github.io/SlideDeck/media/airflowMedicalProducts2.svg" />
+<div><img src="static/airflowMedicalProducts2.svg" />
 </div>
 </div>-->
 <p>We are seeking opportunities to combine our API to better serve individuals most at risk to air pollution: COPD, asthma, and cardiac patients.</p>
@@ -150,36 +150,36 @@
 <h1>Our Team</h1>
 <div class="flex-container-m">
 <div >
-<a href="#"><img src="../static/guenther.jpeg" class="member"></a>
+<a href="#"><img src="../../../My Web Sites/AirFlow4Earth.github.io/img/guenther.jpeg" class="member"></a>
 Günther
 </div>
 <div>
-<a href="#"><img src="../static/sukanya.jpeg"  class="member"></a>
+<a href="#"><img src="../../../My Web Sites/AirFlow4Earth.github.io/img/sukanya.jpeg"  class="member"></a>
 Sukanya
 
 </div>
 <div >
-<img src="../static/testimonials-3.jpg" class="member">
+<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/testimonials-3.jpg" class="member">
 Sebastian
 </div>
 <div>
-<img src="../static/testimonials-2.jpg" class="member">
+<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/testimonials-2.jpg" class="member">
 Lisa
 </div>
 <div>
-<img src="../static/testimonials-1.jpg" class="member">
+<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/testimonials-1.jpg" class="member">
 Majid
 </div>
 <div>
-<img src="../static/testimonials-4.jpg" class="member ">
+<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/testimonials-4.jpg" class="member ">
 Ajayi
 </div>
 <div>
-<img src="../static/Aaron.jpg" class="member">
+<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/Aaron.jpg" class="member">
 Aaron
 </div>
 <div>
-<img src="../static/roland.jpg" class="member">
+<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/roland.jpg" class="member">
 Roland
 </div>
 </div>
