--- a/templates/index.html
+++ b/templates/index.html
@@ -150,36 +150,36 @@
 <h1>Our Team</h1>
 <div class="flex-container-m">
 <div >
-<a href="#"><img src="../../../My Web Sites/AirFlow4Earth.github.io/img/guenther.jpeg" class="member"></a>
+<a href="#"><img src="../static/guenther.jpeg" class="member"></a>
 Günther
 </div>
 <div>
-<a href="#"><img src="../../../My Web Sites/AirFlow4Earth.github.io/img/sukanya.jpeg"  class="member"></a>
+<a href="#"><img src="../static/sukanya.jpeg"  class="member"></a>
 Sukanya
 
 </div>
 <div >
-<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/testimonials-3.jpg" class="member">
+<img src="../static/testimonials-3.jpg" class="member">
 Sebastian
 </div>
 <div>
-<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/testimonials-2.jpg" class="member">
+<img src="../static/testimonials-2.jpg" class="member">
 Lisa
 </div>
 <div>
-<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/testimonials-1.jpg" class="member">
+<img src="../static/testimonials-1.jpg" class="member">
 Majid
 </div>
 <div>
-<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/testimonials-4.jpg" class="member ">
+<img src="../static/testimonials-4.jpg" class="member ">
 Ajayi
 </div>
 <div>
-<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/Aaron.jpg" class="member">
+<img src="../static/Aaron.jpg" class="member">
 Aaron
 </div>
 <div>
-<img src="../../../My Web Sites/AirFlow4Earth.github.io/img/roland.jpg" class="member">
+<img src="../static/roland.jpg" class="member">
 Roland
 </div>
 </div>
