--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>AIRflow</title>
-<link rel="stylesheet" type="text/css" href="../../../My Web Sites/AirFlow4Earth.github.io/SlideDeck/css/stylesStill.css" />
+<link rel="stylesheet" type="text/css" href="../static/stylesStill.css" />
 </head>
 <header>
 </header>
@@ -171,7 +171,7 @@ Lisa
 Majid
 </div>
 <div>
-<img src="../static/testimonials-4.jpg" class="member ">
+<img src="../static/testimonials-4.jpg" class="member">
 Ajayi
 </div>
 <div>
