--- a/static/stylesStill.css
+++ b/static/stylesStill.css
@@ -34,7 +34,7 @@ body{
 
 section.titleSlide, section.endSlide {
 	padding-top:25%;
-	background:#67BEEA url(../static/background.jpg);
+	background:#67BEEA url(background.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
