--- a/templates/index.html
+++ b/templates/index.html
@@ -118,7 +118,7 @@
 <div class="flex-container">
 <div>
 <h3>We know that technology can help people to adapt with changing air conditions.</h3>
-<p>We are a start-up with the goal of mitigating health risks associated with air pollution. By combining data sets, we integrate known relationships from research journals to advise a diverse set of users on reasonable routes to avoid unnecessary exposure to pollution. Our AI makes pollution foreseeable and improves health based decision making.</p>
+<div>We are a start-up with the goal of mitigating health risks associated with air pollution. By combining data sets, we integrate known relationships from research journals to advise a diverse set of users on reasonable routes to avoid unnecessary exposure to pollution. Our solution makes pollution foreseeable and improves health based decision making.</div>
 </div>
 </div>
 </section>
@@ -126,23 +126,30 @@
 <h1>Current Efforts and Explorations</h1>
 <div class="flex-container">
 <div>
+<h2>Pionier Garage Grow Competition update</h2>
+<p>We are beginning to explore the viability of this project as a meaningful service. The <a href="https://grow.pioniergarage.de/2019/Home/Teams#92">team</a> entered the competition after reading evidence from traffic studies that identified measureable relationships that can inform a route guidance service beneficial to different groups of people.</div>
+<div>
 <h2>Developer API to predict pollution routes</h2>
-<p><img src="../static/airflowModel.svg" /></p>
-<p>Examine the market and you will discover what we have - pollution data has not been made into a functioning route service. Our API will provide map developers a new way to interact with their users, and researchers a new way to study the impact of pollution upon their areas of study.</p>
-<h3>Progress: API connections verified. The AI behind the API constructed.</h3>
+<div style="display:flex; justify-content: center;"><img src="../static/airflowModel.svg" /></div>
+<div>Examine the market and you will discover what we have - pollution data has not been made into a functioning route service. Our API will provide map developers a new way to interact with their users, and researchers a new way to study the impact of pollution upon their areas of study.</div>
+<h3>Progress: API connections verified. The AI behind the API is being constructed.</h3>
 </div>
 <div>
 <h2>Medical App</h2>
-<p><img src="../static/airflowMedicalMarket.svg" /></p>
-<!--<div class="flex-container-m">
-<div>
-<img src="static/airflowMedicalProducts.svg" />
+<div style="display:flex; justify-content: center;"><img src="../static/airflowMedicalMarket.svg" /></div>
+<div>We are seeking opportunities to combine our API to better serve 640,000 individuals most at risk to air pollution: COPD, asthma, and cardiac patients.
+<blockquote><a href="https://openres.ersjournals.com/content/5/3/00036-2019">Study:</a> "Of note, [patients] wanted to maintain control of the information; to make connections with the data, but also in order to be alerted when a possible exacerbation occurs."</blockquote> 
+<div style="display:flex; justify-content: center;">
+<img src="../static/airflowMedicalProducts.svg" />
 </div>
-<div><img src="static/airflowMedicalProducts2.svg" />
+We have begun engaging individuals affected by the ailment to understand their daily lifestyles. Currently, we believe, with justification, that those who manage it best rely on different falliable strategies, such as relying on air quality index apps and visual search, to improve their workouts outside. <div><blockquote>"I moved from a city to a small town... when I go out for walks etc. I go to clean areas, I work on the city tho and it's by a busy road..." -Patient 2</blockquote>
+<blockquote>"Obviously, [I] want to avoid running nearby traffic. I really do feel if an old truck would pass me - I'd need to stop as the exhaust fumes provoke coughing." - Patient 1</blockquote></div>
+These two rely on immediate physical searching to adjust their routes while walking or running. This creates a problem as that current technologies enable, up to a point, the ability to plan when and where they might spend time outside. However, there are patients whom rely on Air Quality (AQI) applications, which typically operate by using a still weather station that is limited to a small region. 
+<blockquote>"About all I ever check is the air quality and temp in my weather app."-Patient 3</blockquote>
+<div style="display:flex; justify-content: center;"><img src="../static/airflowMedicalProducts2.svg" />
 </div>
-</div>-->
-<p>We are seeking opportunities to combine our API to better serve individuals most at risk to air pollution: COPD, asthma, and cardiac patients.</p>
-<blockquote><a href="https://openres.ersjournals.com/content/5/3/00036-2019">Study:</a> "Of note, people wanted to maintain control of the information; to make connections with the data, but also in order to be alerted when a possible exacerbation occurs."</blockquote>
+Eventually, the person seeking to manage their condition best while exercising learns that the AQI application is limited but useful. Some patients know that the AQI infers a region and cannot provide more detailed guidance. However, it is possible to use traffic data to provide better guidance to individuals.
+</div>
 </div>
 </div>
 </section>
@@ -159,32 +166,37 @@ Sukanya
 
 </div>
 <div >
-<img src="../static/testimonials-3.jpg" class="member">
+<a href="#"><img src="../static/testimonials-3.jpg" class="member"></a>
 Sebastian
 </div>
 <div>
-<img src="../static/testimonials-2.jpg" class="member">
+<a href="#"><img src="../static/testimonials-2.jpg" class="member"></a>
 Lisa
 </div>
 <div>
-<img src="../static/testimonials-1.jpg" class="member">
+<a href="#"><img src="../static/testimonials-1.jpg" class="member"></a>
 Majid
 </div>
 <div>
-<img src="../static/testimonials-4.jpg" class="member">
+<a href="#"><img src="../static/testimonials-4.jpg" class="member"></a>
 Ajayi
 </div>
 <div>
-<img src="../static/Aaron.jpg" class="member">
+<a href="#"><img src="../static/Aaron.jpg" class="member"></a>
 Aaron
 </div>
 <div>
-<img src="../static/roland.jpg" class="member">
+<a href="#"><img src="../static/roland.jpg" class="member"></a>
 Roland
 </div>
 </div>
 </section>
-
+<section>
+<h1>Share our vision?</h1>
+<div class="email">
+<a href="mailto:team_airflow@outlook.de?subject=GROW Competition" class="button">Let's start talking.</a>
+</div>
+</section>
 </body>
 <footer>
 </footer>
