--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@ Eventually, the person seeking to manage their condition best while exercising l
 </div>
 </section>
 <section class="corePeople">
-<h1>Our Team</h1>
+<h1>Our Current Team</h1>
 <div class="flex-container-m">
 <div >
 <a href="#"><img src="../static/guenther.jpeg" class="member"></a>
@@ -163,15 +163,10 @@ Günther
 <div>
 <a href="#"><img src="../static/sukanya.jpeg"  class="member"></a>
 Sukanya
-
 </div>
 <div >
 <a href="#"><img src="../static/testimonials-3.jpg" class="member"></a>
 Sebastian
-</div>
-<div>
-<a href="#"><img src="../static/testimonials-2.jpg" class="member"></a>
-Lisa
 </div>
 <div>
 <a href="#"><img src="../static/testimonials-1.jpg" class="member"></a>
@@ -190,6 +185,18 @@ Aaron
 Roland
 </div>
 </div>
+<h1>Inactive Members</h1>
+<div class="flex-container-m">
+<div>
+<a href="#"><img src="../static/testimonials-2.jpg" class="member"></a>
+Lisa
+</div>
+<div>
+<a href="#"><img src="../static/stefan.jpg" class="member"></a>
+Stefan
+</div>
+</div>
+
 </section>
 <section>
 <h1>Share our vision?</h1>
