--- a/templates/index.html
+++ b/templates/index.html
@@ -157,43 +157,43 @@ Eventually, the person seeking to manage their condition best while exercising l
 <h1>Our Current Team</h1>
 <div class="flex-container-m">
 <div >
-<a href="#"><img src="../static/guenther.jpeg" class="member"></a>
-Günther
+<a href="https://www.linkedin.com/in/g%C3%BCnter-reuscher-81b194148/"><img src="../static/guenther.jpeg" class="member"></a>
+Günther, Project Consultant
 </div>
 <div>
-<a href="#"><img src="../static/sukanya.jpeg"  class="member"></a>
-Sukanya
+<a href="https://www.linkedin.com/in/sukanyamandal/"><img src="../static/sukanya.jpeg"  class="member"></a>
+Sukanya, Data Scientist
 </div>
 <div >
-<a href="#"><img src="../static/testimonials-3.jpg" class="member"></a>
-Sebastian
+<a href="https://www.linkedin.com/in/sebastianwindeck/"><img src="../static/testimonials-3.jpg" class="member"></a>
+Sebastian, Doctoral Student, ETH Zurich
 </div>
 <div>
-<a href="#"><img src="../static/testimonials-1.jpg" class="member"></a>
-Majid
+<a href="https://www.linkedin.com/in/majidmortazavi/"><img src="../static/testimonials-1.jpg" class="member"></a>
+Majid, Data Scientist
 </div>
 <div>
 <a href="#"><img src="../static/testimonials-4.jpg" class="member"></a>
-Ajayi
+Ajayi, Data Scientist
 </div>
 <div>
 <a href="#"><img src="../static/Aaron.jpg" class="member"></a>
 Aaron
 </div>
 <div>
-<a href="#"><img src="../static/roland.jpg" class="member"></a>
-Roland
+<a href="https://www.linkedin.com/in/roland-he%C3%9F-5a2a712b/"><img src="../static/roland.jpg" class="member"></a>
+Roland, Management Consultant
 </div>
 </div>
 <h1>Inactive Members</h1>
 <div class="flex-container-m">
 <div>
-<a href="#"><img src="../static/testimonials-2.jpg" class="member"></a>
+<a href="https://www.linkedin.com/in/lisa-bouikidou/"><img src="../static/testimonials-2.jpg" class="member"></a>
 Lisa
 </div>
 <div>
-<a href="#"><img src="../static/stefan.jpg" class="member"></a>
-Stefan
+<a href="https://www.linkedin.com/in/stefan-hackl%C3%A4nder/"><img src="../static/stefan.jpg" class="member"></a>
+Stefan, Management Consulting
 </div>
 </div>
 
