--- a/templates/index.html
+++ b/templates/index.html
@@ -189,7 +189,7 @@ Roland, Management Consultant
 <div class="flex-container-m">
 <div>
 <a href="https://www.linkedin.com/in/lisa-bouikidou/"><img src="../static/testimonials-2.jpg" class="member"></a>
-Lisa
+Lisa, Futurist
 </div>
 <div>
 <a href="https://www.linkedin.com/in/stefan-hackl%C3%A4nder/"><img src="../static/stefan.jpg" class="member"></a>
